# rust-cli-openweather

./: Cargo.toml  README.md
src/: main.rs  openweather.rs
